--- a/index.html
+++ b/index.html
@@ -173,6 +173,24 @@
   }
 </style>
 
+<style>
+
+.look-inside-arrow {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  background: rgba(255, 255, 255, 0.85);
+  color: #0077cc;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 2px 6px;
+  border-radius: 4px;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+  pointer-events: none; /* so it doesn't interfere with clicks on the image */
+}
+
+</style>
+
 
 
   <div class="container mt-5">
@@ -236,6 +254,19 @@
   </p>
 </div>
 
+<div class="book-box" style="position: relative; display: inline-block;">
+  <p style="margin: 0;">
+    <strong>Chile's Transformation Amidst Crisis:<br>
+    The Theseus Paradox</strong><br><br>
+
+    <a href="https://kennethbunker.github.io/theseus/" target="_blank" style="position: relative; display: inline-block;">
+      <img src="../img/book1.png" alt="Book Image" width="170" height="170" style="border: none;">
+      <span class="look-inside-arrow">Look Inside ➤</span>
+    </a><br><br>
+
+    NEW BOOK – <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER</a> – AUGUST 2025
+  </p>
+</div>
 
 <p>I received my PhD in political science from The London School of Economics. The purpose of my PhD was to understand how and why parties form electoral and government coalitions in presidentialism. You can read an example of that work <a href="https://doi.org/10.18042/cepc/rep.186.06">here</a>.</p>
 
