--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 </div>
 
 <div class="book-box" style="text-align: center;">
-  <p style="margin: 0;">
+  <p style="margin: 0; font-size: 13px; color: black;">
     <strong>Chile's Transformation Amidst Crisis:<br>
     The Theseus Paradox</strong><br><br>
 
@@ -282,9 +282,15 @@
       <img src="../img/book1.png" alt="Book Image" width="170" height="170" style="border: none;">
     </a><br><br>
 
-    <div class="book-buttons">
-      <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626" class="button preorder-button" target="_blank">Pre-Order</a>
-      <a href="https://kennethbunker.github.io/theseus/" class="button lookinside-button" target="_blank">Look Inside ➤</a>
+    <div class="book-buttons" style="display: flex; justify-content: center; gap: 10px;">
+      <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626" 
+         style="text-decoration: none; font-size: 13px; color: black; background-color: #f2f2f2; padding: 6px 12px; border-radius: 4px; font-weight: bold; display: inline-block;">
+         Pre-Order
+      </a>
+      <a href="https://kennethbunker.github.io/theseus/" 
+         style="text-decoration: none; font-size: 13px; color: black; background-color: #f2f2f2; padding: 6px 12px; border-radius: 4px; font-weight: bold; display: inline-block;">
+         Look Inside ➤
+      </a>
     </div>
   </p>
 </div>
