--- a/index.html
+++ b/index.html
@@ -269,31 +269,10 @@
     <a href="https://kennethbunker.github.io/theseus/" target="_blank">
       <img src="../img/book1.png" alt="Book Image" width="170" height="170" style="border: none;">
     </a><br><br>
-    NEW BOOK – <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER</a> – AUGUST 2025
+    NEW BOOK – <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER</a> -  <a href="https://kennethbunker.github.io/theseus/" style="text-decoration: none; font-weight: bold; color: #0077cc;">SEPT. 4, 2025</a>
   </p>
 </div>
 
-<div class="book-box" style="text-align: center;">
-  <p style="margin: 0; font-size: 13px; color: black;">
-    <strong>Chile's Transformation Amidst Crisis:<br>
-    The Theseus Paradox</strong><br><br>
-
-    <a href="https://kennethbunker.github.io/theseus/" target="_blank" style="position: relative; display: inline-block;">
-      <img src="../img/book1.png" alt="Book Image" width="170" height="170" style="border: none;">
-    </a><br><br>
-
-    <div class="book-buttons" style="display: flex; justify-content: center; gap: 10px;">
-      <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626" 
-         style="text-decoration: none; font-size: 13px; color: black; background-color: #f2f2f2; padding: 6px 12px; border-radius: 4px; font-weight: bold; display: inline-block;">
-         Pre-Order
-      </a>
-      <a href="https://kennethbunker.github.io/theseus/" 
-         style="text-decoration: none; font-size: 13px; color: black; background-color: #f2f2f2; padding: 6px 12px; border-radius: 4px; font-weight: bold; display: inline-block;">
-         Look Inside ➤
-      </a>
-    </div>
-  </p>
-</div>
 
 <p>I received my PhD in political science from The London School of Economics. The purpose of my PhD was to understand how and why parties form electoral and government coalitions in presidentialism. You can read an example of that work <a href="https://doi.org/10.18042/cepc/rep.186.06">here</a>.</p>
 
