--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 <figure class="avatar">
     <img src="https://kennethbunker.github.io/me.png"/> 
 </figure>
-<p>I am an academic, consultant, and columnist. I serve as an associate professor and director of the Democracy and Government Lab in the Economics Department at San Sebastián University. I also work with several organizations that provide discreet, reliable solutions to investors, stakeholders, and risk analysts around the world.</p>
+<p>I am an academic, consultant, and columnist. I serve as an associate professor and director of the Democracy and Government Lab in the Economics Department at San Sebastian University. I also work with several organizations that provide discreet, reliable solutions to investors, stakeholders, and risk analysts around the world.</p>
 
 <p>Click <a href="https://kennethbunker.github.io/columns">here</a> to read my columns in the press.
 
@@ -237,7 +237,7 @@
 </div>
 
 
-<p>I received my PhD in political science from The London School of Economics. The purpose of my PhD was to understand how and why parties form electoral and government coalitions in presidentialism. You can read an example of that work <a href="https://doi.org/10.18042/cepc/rep.186.06">here</a>.</p>
+<p>I received my PhD in political science from The London School of Economics. The purpose of my dissertation was to understand how and why parties form electoral and government coalitions in presidentialism. You can read an example of that work <a href="https://doi.org/10.18042/cepc/rep.186.06">here</a>.</p>
 
 <p>I am currently an associate professor at San Sebastian University. Before that, I was an Assistant Professor at Universidad Central, and held visiting positions at Sapienza University, University of Milan, and University of Bergamo. I founded the Democracy and Government Lab at USS and the Electoral Program at Universidad Central.</p>
 
