--- a/lun/index.html
+++ b/lun/index.html
@@ -154,8 +154,8 @@
 <img src="/img/lun/20250703.jpeg">
 <img src="/img/lun/20250704.jpeg">
 <img src="/img/lun/20250705.jpeg">
-<img src="/img/lun/blanco.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20250709.jpeg">
+<img src="/img/lun/20250710.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
 </div>
