--- a/lun/index.html
+++ b/lun/index.html
@@ -156,7 +156,7 @@
 <img src="/img/lun/20250705.jpeg">
 <img src="/img/lun/20250709.jpeg">
 <img src="/img/lun/20250710.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20250717.jpeg">
 <img src="/img/lun/blanco.jpeg">
 </div>
 
