--- a/theseus/index.html
+++ b/theseus/index.html
@@ -151,45 +151,69 @@
     </p>
 
     <hr>
+<!-- ===== FRONT MATTER ===== -->
+<div class="container px-0" id="front-matter">
+  <h2>Front Matter</h2>
+  <p class="text-muted">Preliminary materials commonly found before Chapter 1.</p>
 
-    <!-- ===== FRONT MATTER ===== -->
-    <div class="container px-0" id="front-matter">
-      <h2>Front Matter</h2>
-      <p class="text-muted">Preliminary materials commonly found before Chapter 1.</p>
-      <div class="d-flex flex-wrap card-list">
-        <div class="card m-2">
-          <div class="card-body">
-            <h5 class="card-title mb-1">Cover & Title Page</h5>
-            <p class="card-text">High-res cover and title page.</p>
+  <div class="row">
+    <!-- CARD -->
+    <div class="col-md-3 col-sm-6 mb-4 d-flex">
+      <div class="card flex-fill d-flex flex-column">
+        <div class="card-body d-flex flex-column">
+          <h5 class="card-title mb-1">Cover & Title Page</h5>
+          <p class="card-text">High-res cover and title page.</p>
+          <div class="mt-auto">
             <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/img/book1.png" target="_blank" rel="noopener">View Cover</a>
-            <a class="btn btn-sm btn-outline-secondary" href="https://kennethbunker.github.io/img/book1.png" download>Download</a>
-          </div>
-        </div>
-        <div class="card m-2">
-          <div class="card-body">
-            <h5 class="card-title mb-1">Preface</h5>
-            <p class="card-text">Author’s preface (PDF).</p>
-            <a class="btn btn-sm btn-primary" href="#" target="_blank" rel="noopener">Full Text</a>
-          </div>
-        </div>
-        <div class="card m-2">
-          <div class="card-body">
-            <h5 class="card-title mb-1">Acknowledgments</h5>
-            <p class="card-text">Acknowledgments (PDF).</p>
-            <a class="btn btn-sm btn-primary" href="#" target="_blank" rel="noopener">Full Text</a>
-          </div>
-        </div>
-        <div class="card m-2">
-          <div class="card-body">
-            <h5 class="card-title mb-1">Table of Contents</h5>
-            <p class="card-text">TOC extract.</p>
-            <a class="btn btn-sm btn-primary" href="#" target="_blank" rel="noopener">View</a>
+            <a class="btn btn-sm btn-outline-secondary mt-1" href="https://kennethbunker.github.io/img/book1.png" download>Download</a>
           </div>
         </div>
       </div>
     </div>
 
-    <hr>
+    <!-- CARD -->
+    <div class="col-md-3 col-sm-6 mb-4 d-flex">
+      <div class="card flex-fill d-flex flex-column">
+        <div class="card-body d-flex flex-column">
+          <h5 class="card-title mb-1">Preface</h5>
+          <p class="card-text">Author’s preface (PDF).</p>
+          <div class="mt-auto">
+            <a class="btn btn-sm btn-primary" href="#" target="_blank" rel="noopener">Full Text</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- CARD -->
+    <div class="col-md-3 col-sm-6 mb-4 d-flex">
+      <div class="card flex-fill d-flex flex-column">
+        <div class="card-body d-flex flex-column">
+          <h5 class="card-title mb-1">Acknowledgments</h5>
+          <p class="card-text">Acknowledgments (PDF).</p>
+          <div class="mt-auto">
+            <a class="btn btn-sm btn-primary" href="#" target="_blank" rel="noopener">Full Text</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- CARD -->
+    <div class="col-md-3 col-sm-6 mb-4 d-flex">
+      <div class="card flex-fill d-flex flex-column">
+        <div class="card-body d-flex flex-column">
+          <h5 class="card-title mb-1">Table of Contents</h5>
+          <p class="card-text">TOC extract.</p>
+          <div class="mt-auto">
+            <a class="btn btn-sm btn-primary" href="#" target="_blank" rel="noopener">View</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<hr>
+
 
     <!-- ===== CHAPTERS START ===== -->
     <div id="chapters"></div>
