--- a/theseus/index.html
+++ b/theseus/index.html
@@ -165,7 +165,6 @@
           <p class="card-text">High-res cover and title page.</p>
           <div class="mt-auto">
             <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/img/book1.png" target="_blank" rel="noopener">View Cover</a>
-            <a class="btn btn-sm btn-outline-secondary mt-1" href="https://kennethbunker.github.io/img/book1.png" download>Download</a>
           </div>
         </div>
       </div>
@@ -175,10 +174,10 @@
     <div class="col-md-3 col-sm-6 mb-4 d-flex">
       <div class="card flex-fill d-flex flex-column">
         <div class="card-body d-flex flex-column">
-          <h5 class="card-title mb-1">Preface</h5>
+          <h5 class="card-title mb-1">Frontmatter</h5>
           <p class="card-text">Author’s preface (PDF).</p>
           <div class="mt-auto">
-            <a class="btn btn-sm btn-primary" href="#" target="_blank" rel="noopener">Full Text</a>
+            <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener">Download</a>
           </div>
         </div>
       </div>
@@ -188,8 +187,8 @@
     <div class="col-md-3 col-sm-6 mb-4 d-flex">
       <div class="card flex-fill d-flex flex-column">
         <div class="card-body d-flex flex-column">
-          <h5 class="card-title mb-1">Acknowledgments</h5>
-          <p class="card-text">Acknowledgments (PDF).</p>
+          <h5 class="card-title mb-1">Data</h5>
+          <p class="card-text">Dataverse</p>
           <div class="mt-auto">
             <a class="btn btn-sm btn-primary" href="#" target="_blank" rel="noopener">Full Text</a>
           </div>
@@ -201,8 +200,8 @@
     <div class="col-md-3 col-sm-6 mb-4 d-flex">
       <div class="card flex-fill d-flex flex-column">
         <div class="card-body d-flex flex-column">
-          <h5 class="card-title mb-1">Table of Contents</h5>
-          <p class="card-text">TOC extract.</p>
+          <h5 class="card-title mb-1">Code</h5>
+          <p class="card-text">GitHub</p>
           <div class="mt-auto">
             <a class="btn btn-sm btn-primary" href="#" target="_blank" rel="noopener">View</a>
           </div>
