--- a/theseus/index.html
+++ b/theseus/index.html
@@ -190,7 +190,7 @@
           <h5 class="card-title mb-1">Data</h5>
           <p class="card-text">Dataverse</p>
           <div class="mt-auto">
-            <a class="btn btn-sm btn-primary" href="#" target="_blank" rel="noopener">Full Text</a>
+            <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener">Full Text</a>
           </div>
         </div>
       </div>
@@ -203,7 +203,7 @@
           <h5 class="card-title mb-1">Code</h5>
           <p class="card-text">GitHub</p>
           <div class="mt-auto">
-            <a class="btn btn-sm btn-primary" href="#" target="_blank" rel="noopener">View</a>
+            <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener">View</a>
           </div>
         </div>
       </div>
