--- a/theseus/index.html
+++ b/theseus/index.html
@@ -151,10 +151,10 @@
 
     <hr>
 
-    <!-- ===== FRONT MATTER ===== -->
+    <!-- ===== FRONT + BACK MATTER ===== -->
     <div class="container px-0" id="front-matter">
-      <h2>Front Matter</h2>
-      <p class="text-muted">Preliminary materials commonly found before Chapter 1.</p>
+      <h2>Front Matter & Back Matter</h2>
+      <p class="text-muted">Info about the book.</p>
 
       <div class="row">
         <!-- CARD -->
@@ -175,7 +175,7 @@
           <div class="card flex-fill d-flex flex-column">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title mb-1">Frontmatter</h5>
-              <p class="card-text">Author’s preface (PDF).</p>
+              <p class="card-text">Author’s preface and Acknowledgments.</p>
               <div class="mt-auto">
                 <!-- TODO: replace '#' with actual PDF link -->
                 <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener noreferrer">Download</a>
@@ -188,8 +188,73 @@
         <div class="col-md-3 col-sm-6 mb-4 d-flex">
           <div class="card flex-fill d-flex flex-column">
             <div class="card-body d-flex flex-column">
+              <h5 class="card-title mb-1">TOC</h5>
+              <p class="card-text">Table of Contents</p>
+              <div class="mt-auto">
+                <!-- TODO: replace '#' with your Dataverse collection or dataset -->
+                <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- CARD -->
+        <div class="col-md-3 col-sm-6 mb-4 d-flex">
+          <div class="card flex-fill d-flex flex-column">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title mb-1">Backmatter</h5>
+              <p class="card-text">Index</p>
+              <div class="mt-auto">
+                <!-- TODO: replace with repo or folder -->
+                <a class="btn btn-sm btn-outline-primary" href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <hr>
+
+    <!-- ===== RESOURCES ===== -->
+    <div class="container px-0" id="front-matter">
+      <h2>Resources</h2>
+      <p class="text-muted">Data, Code, Documents and Others.</p>
+
+      <div class="row">
+        <!-- CARD -->
+        <div class="col-md-3 col-sm-6 mb-4 d-flex">
+          <div class="card flex-fill d-flex flex-column">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title mb-1">Data</h5>
-              <p class="card-text">Dataverse</p>
+              <p class="card-text">High-res cover and title page.</p>
+              <div class="mt-auto">
+                <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/img/book1.png" target="_blank" rel="noopener noreferrer">View Cover</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- CARD -->
+        <div class="col-md-3 col-sm-6 mb-4 d-flex">
+          <div class="card flex-fill d-flex flex-column">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title mb-1">Code</h5>
+              <p class="card-text">R scripts.</p>
+              <div class="mt-auto">
+                <!-- TODO: replace '#' with actual PDF link -->
+                <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener noreferrer">Download</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- CARD -->
+        <div class="col-md-3 col-sm-6 mb-4 d-flex">
+          <div class="card flex-fill d-flex flex-column">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title mb-1">Files</h5>
+              <p class="card-text">Literature and historical documents</p>
               <div class="mt-auto">
                 <!-- TODO: replace '#' with your Dataverse collection or dataset -->
                 <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener noreferrer">Full Text</a>
@@ -202,8 +267,8 @@
         <div class="col-md-3 col-sm-6 mb-4 d-flex">
           <div class="card flex-fill d-flex flex-column">
             <div class="card-body d-flex flex-column">
-              <h5 class="card-title mb-1">Code</h5>
-              <p class="card-text">GitHub</p>
+              <h5 class="card-title mb-1">Images</h5>
+              <p class="card-text">Images and other photos</p>
               <div class="mt-auto">
                 <!-- TODO: replace with repo or folder -->
                 <a class="btn btn-sm btn-outline-primary" href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer">View</a>
@@ -215,29 +280,6 @@
     </div>
 
     <hr>
-
-    <!-- ===== FILES (PDFs) ===== -->
-    <div class="container px-0" id="files">
-      <h2>Files</h2>
-      <p class="text-muted">Downloadable PDFs and related materials.</p>
-      <div class="row">
-        <!-- Example file card; duplicate as needed -->
-        <div class="col-md-4 col-sm-6 mb-4 d-flex">
-          <div class="card flex-fill d-flex flex-column">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title mb-1">Sample PDF</h5>
-              <p class="card-text">Replace this with your actual PDF file.</p>
-              <div class="mt-auto">
-                <!-- TODO: replace '#' with your PDF -->
-                <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener noreferrer">Download PDF</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Add more file cards here -->
-      </div>
-    </div>
-
     <hr>
 
     <!-- ===== CHAPTERS START ===== -->
