--- a/theseus/index.html
+++ b/theseus/index.html
@@ -203,7 +203,7 @@
           <div class="card flex-fill d-flex flex-column">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title mb-1">Backmatter</h5>
-              <p class="card-text">Index</p>
+              <p class="card-text">Index and Appendix</p>
               <div class="mt-auto">
                 <!-- TODO: replace with repo or folder -->
                 <a class="btn btn-sm btn-outline-primary" href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
