--- a/theseus/index.html
+++ b/theseus/index.html
@@ -164,7 +164,7 @@
               <h5 class="card-title mb-1">Cover &amp; Title Page</h5>
               <p class="card-text">High-res cover and title page.</p>
               <div class="mt-auto">
-                <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/img/book1.png" target="_blank" rel="noopener noreferrer">View Cover</a>
+                <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/img/book1.png" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
               </div>
             </div>
           </div>
@@ -175,10 +175,10 @@
           <div class="card flex-fill d-flex flex-column">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title mb-1">Frontmatter</h5>
-              <p class="card-text">Author’s preface and Acknowledgments.</p>
+              <p class="card-text">Author’s preface.</p>
               <div class="mt-auto">
                 <!-- TODO: replace '#' with actual PDF link -->
-                <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener noreferrer">Download</a>
+                <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
               </div>
             </div>
           </div>
@@ -227,9 +227,9 @@
           <div class="card flex-fill d-flex flex-column">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title mb-1">Data</h5>
-              <p class="card-text">High-res cover and title page.</p>
+              <p class="card-text">csv format.</p>
               <div class="mt-auto">
-                <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/img/book1.png" target="_blank" rel="noopener noreferrer">View Cover</a>
+                <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/img/book1.png" target="_blank" rel="noopener noreferrer">Dataverse</a>
               </div>
             </div>
           </div>
@@ -240,10 +240,10 @@
           <div class="card flex-fill d-flex flex-column">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title mb-1">Code</h5>
-              <p class="card-text">R scripts.</p>
+              <p class="card-text">r scripts.</p>
               <div class="mt-auto">
                 <!-- TODO: replace '#' with actual PDF link -->
-                <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener noreferrer">Download</a>
+                <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener noreferrer">Github</a>
               </div>
             </div>
           </div>
@@ -257,7 +257,7 @@
               <p class="card-text">Literature and historical documents</p>
               <div class="mt-auto">
                 <!-- TODO: replace '#' with your Dataverse collection or dataset -->
-                <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener noreferrer">Full Text</a>
+                <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener noreferrer">+ info</a>
               </div>
             </div>
           </div>
@@ -271,7 +271,7 @@
               <p class="card-text">Images and other photos</p>
               <div class="mt-auto">
                 <!-- TODO: replace with repo or folder -->
-                <a class="btn btn-sm btn-outline-primary" href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer">View</a>
+                <a class="btn btn-sm btn-outline-primary" href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer">+ info</a>
               </div>
             </div>
           </div>
