--- a/theseus/index.html
+++ b/theseus/index.html
@@ -161,8 +161,8 @@
         <div class="col-md-3 col-sm-6 mb-4 d-flex">
           <div class="card flex-fill d-flex flex-column">
             <div class="card-body d-flex flex-column">
-              <h5 class="card-title mb-1">Cover &amp; Title Page</h5>
-              <p class="card-text">High-res cover and title page.</p>
+              <h5 class="card-title mb-1">Cover</h5>
+              <p class="card-text">High-res cover and title page</p>
               <div class="mt-auto">
                 <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/img/book1.png" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
               </div>
@@ -189,7 +189,7 @@
           <div class="card flex-fill d-flex flex-column">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title mb-1">TOC</h5>
-              <p class="card-text">Table of Contents</p>
+              <p class="card-text">Table of contents</p>
               <div class="mt-auto">
                 <!-- TODO: replace '#' with your Dataverse collection or dataset -->
                 <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
@@ -268,7 +268,7 @@
           <div class="card flex-fill d-flex flex-column">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title mb-1">Images</h5>
-              <p class="card-text">Images and other photos</p>
+              <p class="card-text">Historical photos</p>
               <div class="mt-auto">
                 <!-- TODO: replace with repo or folder -->
                 <a class="btn btn-sm btn-outline-primary" href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer">+ info</a>
