--- a/theseus/index.html
+++ b/theseus/index.html
@@ -102,11 +102,11 @@
     <div class="d-flex flex-wrap">
       <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#front-matter">Front Matter</a>
       <!-- Single Errata link (GitHub repo) -->
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer">Errata</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://github.com/kennethbunker/theseus/errata" target="_blank" rel="noopener noreferrer">Errata</a>
       <!-- Separate Files and Data -->
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#files">Files</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus/files/">Files</a>
       <!-- If you have a Dataverse collection link, replace '#' below -->
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#" target="_blank" rel="noopener noreferrer">Data</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://dataverse.harvard.edu/dataverse/theseus/" target="_blank" rel="noopener noreferrer">Data</a>
       <!-- Images live on a separate page -->
       <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus/images/">Images</a>
       <a class="btn btn-sm btn-outline-secondary mb-2" href="#chapters">Chapters</a>
@@ -130,7 +130,7 @@
         <a href="https://kennethbunker.github.io/theseus/" target="_blank" rel="noopener noreferrer">
           <img src="https://kennethbunker.github.io/img/book1.png" alt="Book cover" width="170" height="170" style="border: none;">
         </a><br><br>
-        NEW BOOK – <a href="https://link.springer.com/book/9783031964626" target="_blank" rel="noopener noreferrer" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER</a> – AUGUST 2025
+        NEW BOOK – <a href="https://link.springer.com/book/9783031964626" target="_blank" rel="noopener noreferrer" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER</a> – SEPTEMBER 2025
       </p>
     </div>
 
@@ -178,7 +178,7 @@
               <p class="card-text">Author’s preface.</p>
               <div class="mt-auto">
                 <!-- TODO: replace '#' with actual PDF link -->
-                <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
+                <a class="btn btn-sm btn-outline-primary" href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
               </div>
             </div>
           </div>
@@ -192,7 +192,7 @@
               <p class="card-text">Table of contents</p>
               <div class="mt-auto">
                 <!-- TODO: replace '#' with your Dataverse collection or dataset -->
-                <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
+                <a class="btn btn-sm btn-outline-primary" href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
               </div>
             </div>
           </div>
@@ -229,7 +229,7 @@
               <h5 class="card-title mb-1">Data</h5>
               <p class="card-text">csv format.</p>
               <div class="mt-auto">
-                <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/img/book1.png" target="_blank" rel="noopener noreferrer">Dataverse</a>
+                <a class="btn btn-sm btn-outline-primary" href="https://dataverse.harvard.edu/dataverse/theseus" target="_blank" rel="noopener noreferrer">Dataverse</a>
               </div>
             </div>
           </div>
@@ -243,7 +243,7 @@
               <p class="card-text">r scripts.</p>
               <div class="mt-auto">
                 <!-- TODO: replace '#' with actual PDF link -->
-                <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener noreferrer">Github</a>
+                <a class="btn btn-sm btn-outline-primary" href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer">Github</a>
               </div>
             </div>
           </div>
@@ -257,7 +257,7 @@
               <p class="card-text">Literature and historical documents</p>
               <div class="mt-auto">
                 <!-- TODO: replace '#' with your Dataverse collection or dataset -->
-                <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener noreferrer">+ info</a>
+                <a class="btn btn-sm btn-outline-primary" href="https://github.com/kennethbunker/theseus/files" target="_blank" rel="noopener noreferrer">+ info</a>
               </div>
             </div>
           </div>
@@ -271,7 +271,7 @@
               <p class="card-text">Historical photos</p>
               <div class="mt-auto">
                 <!-- TODO: replace with repo or folder -->
-                <a class="btn btn-sm btn-outline-primary" href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer">+ info</a>
+                <a class="btn btn-sm btn-outline-primary" href="https://github.com/kennethbunker/theseus/images" target="_blank" rel="noopener noreferrer">+ info</a>
               </div>
             </div>
           </div>
@@ -279,7 +279,6 @@
       </div>
     </div>
 
-    <hr>
     <hr>
 
     <!-- ===== CHAPTERS START ===== -->
