--- a/theseus/index.html
+++ b/theseus/index.html
@@ -101,15 +101,11 @@
     <div class="mb-2 mb-sm-0"><strong>Resources:</strong></div>
     <div class="d-flex flex-wrap">
       <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#front-matter">Front Matter</a>
-      <!-- Single Errata link (GitHub repo) -->
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://github.com/kennethbunker/theseus/errata" target="_blank" rel="noopener noreferrer">Errata</a>
-      <!-- Separate Files and Data -->
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus/files/">Files</a>
-      <!-- If you have a Dataverse collection link, replace '#' below -->
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://dataverse.harvard.edu/dataverse/theseus/" target="_blank" rel="noopener noreferrer">Data</a>
-      <!-- Images live on a separate page -->
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus/images/">Images</a>
-      <a class="btn btn-sm btn-outline-secondary mb-2" href="#chapters">Chapters</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#errata">Errata</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#files">Files</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#data">Data</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#images">Images</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#chapters">Chapters</a>
     </div>
   </div>
 </div>
