--- a/theseus/index.html
+++ b/theseus/index.html
@@ -253,7 +253,7 @@
               <p class="card-text">Literature and historical documents</p>
               <div class="mt-auto">
                 <!-- TODO: replace '#' with your Dataverse collection or dataset -->
-                <a class="btn btn-sm btn-outline-primary" href="https://github.com/kennethbunker/theseus/files" target="_blank" rel="noopener noreferrer">+ info</a>
+                <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/theseus/files/" target="_blank" rel="noopener noreferrer">+ info</a>
               </div>
             </div>
           </div>
@@ -267,7 +267,7 @@
               <p class="card-text">Historical photos</p>
               <div class="mt-auto">
                 <!-- TODO: replace with repo or folder -->
-                <a class="btn btn-sm btn-outline-primary" href="https://github.com/kennethbunker/theseus/images" target="_blank" rel="noopener noreferrer">+ info</a>
+                <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/theseus/images/" target="_blank" rel="noopener noreferrer">+ info</a>
               </div>
             </div>
           </div>
